--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a target="_blank" href="http://181.63.249.245:8081/Ejemplos/MySoccer/ ">My Soccer</a>
                     </td>
                     <td>
-                        <a target="_blank" href="Soccer_com.capm.soccer.apk">APK Soccer</a>
+                        <a target="_blank" href="Soccer_com.capm.soccer.apk" download="Soccer.apk">APK Soccer</a>
                     </td>
                 </tr>
                 <tr>
@@ -50,7 +50,7 @@
                         <a target="_blank" href="http://181.63.249.245:8081/Ejemplos/MyTaxi/ ">My Taxi</a>
                     </td>
                     <td>
-                        <a target="_blank" href="Taxi_com.capm.taxi.apk">APK Taxi</a>
+                        <a target="_blank" href="Taxi_com.capm.taxi.apk" download="Taxi.apk">APK Taxi</a>
                     </td>
                 </tr>
             </tbody>
